All sources from generated source tree. Not sure if this will work since there is some kotlin mixed in but will try to compile this with WTK. If this completely fails I can start trimmin down based on dependency tree from dependency finder