@@ -4,6 +4,6 @@ public class Shorts
 {
     public static Short valueOf(short value)
     {
-        return new Short(value);
+        return Short.valueOf(value);
     }
 }
